--- a/trip_planner_back/src/main/resources/application.properties
+++ b/trip_planner_back/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.servlet.multipart.max-request-size=50MB
 
 #filelocation
 file.root=C:/Temp/trip_planner
+
+#jwt enc key
+jwt.secret=kh.web.secret.code.dangsan.aclass.long.long.long.long.long.longgggggggg
