--- a/trip_planner_back/pom.xml
+++ b/trip_planner_back/pom.xml
@@ -17,6 +17,13 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-mail</artifactId>
+		    <version>3.2.4</version>
+		</dependency>
+	
 		<!-- https://mvnrepository.com/artifact/org.springframework.social/spring-social-google -->
 		<dependency>
 		    <groupId>org.springframework.social</groupId>
@@ -24,21 +31,13 @@
 		    <version>1.0.0.RELEASE</version>
 		</dependency>
 	
-		<!-- https://mvnrepository.com/artifact/com.github.scribejava/scribejava-core -->
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-client -->
 		<dependency>
-		    <groupId>com.github.scribejava</groupId>
-		    <artifactId>scribejava-core</artifactId>
-		    <version>8.3.3</version>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-oauth2-client</artifactId>
+		    <version>6.2.3</version>
 		</dependency>
-		
-		
-		<!-- https://mvnrepository.com/artifact/com.github.scribejava/scribejava-apis -->
-		<dependency>
-		    <groupId>com.github.scribejava</groupId>
-		    <artifactId>scribejava-apis</artifactId>
-		    <version>8.3.3</version>
-		    <scope>runtime</scope>
-		</dependency>
+
 	
 		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
 		<dependency>
