--- a/trip_planner_back/src/main/resources/application.properties
+++ b/trip_planner_back/src/main/resources/application.properties
@@ -17,6 +17,33 @@ mybatis.configuration.jdbc-type-for-null=NULL
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
 
+#kakao oauth2
+spring.security.oauth2.client.registration.kakao.client-id=3e4f84af4d9e202c3d41b6828ae7ed84
+spring.security.oauth2.client.registration.kakao.client-secret=tFkVHBDcPeQ3OvstWhfjDgp7P83hSm4G
+spring.security.oauth2.client.registration.kakao.redirect-uri={baseUrl}/oauth2/callback/{registrationId}
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
+spring.security.oauth2.client.registration.kakao.scope=account_email
+
+#kakao oauth2 provider
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.kakao.user-name-attribute=id
+
+#naver oauth2
+spring.security.oauth2.client.registration.naver.client-id=2uzEKBVdWTTEN62HKam_
+spring.security.oauth2.client.registration.naver.client-secret=HqtalMxF8A
+spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/oauth2/callback/{registrationId}
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.scope=email
+
+#naver oauth2 provider
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
+
 #filelocation
 file.root=C:/Temp/trip_planner
 
