--- a/trip_planner_front/package.json
+++ b/trip_planner_front/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.10",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
