--- a/trip_planner_front/package.json
+++ b/trip_planner_front/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tosspayments/payment-widget-sdk": "^0.10.2",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "nanoid": "^5.0.6",
