--- a/trip_planner_back/pom.xml
+++ b/trip_planner_back/pom.xml
@@ -16,6 +16,7 @@
 	<properties>
 		<java.version>21</java.version>
 	</properties>
+	<packaging>jar</packaging>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
 		<dependency>
