--- a/trip_planner_back/src/main/resources/application.properties
+++ b/trip_planner_back/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 server.port=8888
 
 #oracle
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@192.168.10.10:1521/xe
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521/xe
 spring.datasource.username=trip_planner
 spring.datasource.password=1234
 
@@ -45,7 +45,10 @@ spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver
 spring.security.oauth2.client.provider.naver.user-name-attribute=response
 
 #filelocation
-file.root=C:/Temp/trip_planner
+file.root=/home/ubuntu/react
 
 #jwt enc key
 jwt.secret=kh.web.secret.code.dangsan.aclass.long.long.long.long.long.longgggggggg
+
+#UTC Time-setting
+spring.datasource.hikari.data-source-properties.oracle.jdbc.timezoneAsRegion=false
